Rebuilding JAR using Java 22 and fixing deprecated usages of Integer constructor